chore: fix minor bugs and refactor prompts
