# agents/models.go
@@ -1,9 +1,14 @@
 package agents
 
+type UsageGrade struct {
+	Score    int    `json:"score"`
+	Feedback string `json:"feedback"`
+}
+
 type GeneratedLesson struct {
-	Content         string `json:"content"`
-	SampleSentences string `json:"sample_sentences"`
-	WordsMeaning    string `json:"words_meaning"`
+	Content         string            `json:"content"`
+	SampleSentences []string          `json:"sample_sentences"`
+	WordsMeaning    map[string]string `json:"words_meaning"`
 }
 
 type GeneratedTranslationExercise struct {
