# dto/agents/grade_usage.go
@@ -1,0 +1,6 @@
+package dto
+
+type GradeUsageRequest struct {
+	Sentece              string
+	GrammarPatternOrWord string
+}
