# handlers/exercise_handler_impl.go
@@ -14,6 +14,51 @@ type exerciseHandlerImpl struct {
 	userService     services.UserService
 }
 
+// GradeUsageHandler godoc
+//
+//	@Summary		Grade Usage of language
+//	@Description	Grade the usage of the language in a sentence
+//	@Tags			exercise
+//	@Accept			json
+//	@Produce		json
+//	@Param			user	body		dto.GradeUsageRequest	true	"Grade Usage Request"
+//	@Success		200		{object}		agents.UsageGrade
+//	@Failure		400		{object}	map[string]string
+//	@Failure		500		{object}	map[string]string
+//	@Router			/resources/exercise/usage/grade [post]
+func (h *exerciseHandlerImpl) GradeUsageHandler(w http.ResponseWriter, r *http.Request) {
+	var req dto.GradeUsageRequest
+	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
+		utils.WriteJSONStatus(w, map[string]string{"error": "Invalid request body"}, http.StatusBadRequest)
+		return
+	}
+
+	userIDStr := r.Header.Get("User-Id")
+	if userIDStr == "" {
+		utils.WriteJSONStatus(w, map[string]string{"error": "userId is required"}, http.StatusBadRequest)
+		return
+	}
+	userID, err := strconv.Atoi(userIDStr)
+	if err != nil {
+		utils.WriteJSONStatus(w, map[string]string{"error": "invalid userId"}, http.StatusBadRequest)
+		return
+	}
+
+	user, err := h.userService.GetUserById(userID)
+	if err != nil || user == nil {
+		utils.WriteJSONStatus(w, map[string]string{"error": "invalid userId"}, http.StatusBadRequest)
+		return
+	}
+
+	grade, err := h.exerciseService.GradeUsage(user, req.Sentece, req.GrammarPatternOrWord)
+	if err != nil {
+		utils.WriteJSONStatus(w, map[string]string{"error": "Failed to generate translation exercise"}, http.StatusInternalServerError)
+		return
+	}
+
+	utils.WriteJSON(w, grade)
+}
+
 // GenerateTranslationExerciseHandler godoc
 //
 //	@Summary		Get Translation Exercise
@@ -25,7 +70,7 @@ type exerciseHandlerImpl struct {
 //	@Success		200		{object}		agents.GeneratedTranslationExercise
 //	@Failure		400		{object}	map[string]string
 //	@Failure		500		{object}	map[string]string
-//	@Router			/exercise/translation/generate [post]
+//	@Router			/resources/exercise/translation/generate [post]
 func (h *exerciseHandlerImpl) GenerateTranslationExerciseHandler(w http.ResponseWriter, r *http.Request) {
 	var req dto.GeneraterTranslationExerciseRequest
 	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
